Add delivery as a passed constraint for bosh-src before finalizing
[#163461784](https://www.pivotaltracker.com/story/show/163461784)

Co-authored-by: Behrouz Soroushian <bsoroushian@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -879,7 +879,7 @@ jobs:
     plan:
       - aggregate:
         - get: bosh-src
-          passed: [deploy-acceptance-env]
+          passed: [deploy-acceptance-env, delivery]
         - get: bosh-src-latest
           resource: bosh-src
         - get: bosh-cli
