Add delivery as a passed constraint before finalizing

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1232,6 +1232,7 @@ jobs:
       - bats-centos
       - bats-ubuntu-trusty
       - bats-ubuntu-xenial
+      - delivery
     - get: bosh-master
     - get: bosh-dev-release
       passed:
