Add delivery as a passed constraint before finalizing

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -585,6 +585,7 @@ jobs:
           passed:
             - bats-centos
             - bats-ubuntu
+            - delivery
         - get: bosh-master
         - get: bosh-dev-release
           resource: bosh-candidate-release-tarballs
