Add gcp_private_netwrok_name to pipeline and yml files.
[#163986187](https://www.pivotaltracker.com/story/show/163986187)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -786,6 +786,7 @@ jobs:
           gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
           gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
           gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+          gcp_private_network_name: brats-ubuntu-trusty-((branch_name))
           rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
           rds_mysql_password: ((brats-rds-mysql-external-db-password))
           rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -810,6 +811,7 @@ jobs:
         GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
         GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
         GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+        GCP_PRIVATE_NETWORK_NAME: brats-ubuntu-trusty-((branch_name))
         RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
         RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
         RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -833,6 +835,7 @@ jobs:
           GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
           GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
           GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+          GCP_PRIVATE_NETWORK_NAME: brats-ubuntu-trusty-((branch_name))
           RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
           RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
           RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -858,6 +861,7 @@ jobs:
             gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
             gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
             gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+            gcp_private_network_name: brats-ubuntu-trusty-((branch_name))
             rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
             rds_mysql_password: ((brats-rds-mysql-external-db-password))
             rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -901,6 +905,7 @@ jobs:
           gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
           gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
           gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+          gcp_private_network_name: bbr-ubuntu-trusty-((branch_name))
           rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
           rds_mysql_password: ((brats-rds-mysql-external-db-password))
           rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -925,6 +930,7 @@ jobs:
         GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
         GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
         GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+        GCP_PRIVATE_NETWORK_NAME: bbr-ubuntu-trusty-((branch_name))
         RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
         RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
         RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -948,6 +954,7 @@ jobs:
           GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
           GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
           GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+          GCP_PRIVATE_NETWORK_NAME: bbr-ubuntu-trusty-((branch_name))
           RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
           RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
           RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -973,6 +980,7 @@ jobs:
             gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
             gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
             gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+            gcp_private_network_name: bbr-ubuntu-trusty-((branch_name))
             rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
             rds_mysql_password: ((brats-rds-mysql-external-db-password))
             rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -1011,6 +1019,7 @@ jobs:
           gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
           gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
           gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+          gcp_private_network_name: brats-ubuntu-xenial-((branch_name))
           rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
           rds_mysql_password: ((brats-rds-mysql-external-db-password))
           rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -1035,6 +1044,7 @@ jobs:
         GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
         GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
         GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+        GCP_PRIVATE_NETWORK_NAME: brats-ubuntu-xenial-((branch_name))
         RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
         RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
         RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -1058,6 +1068,7 @@ jobs:
           GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
           GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
           GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+          GCP_PRIVATE_NETWORK_NAME: brats-ubuntu-xenial-((branch_name))
           RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
           RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
           RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -1083,6 +1094,7 @@ jobs:
             gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
             gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
             gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+            gcp_private_network_name: brats-ubuntu-xenial-((branch_name))
             rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
             rds_mysql_password: ((brats-rds-mysql-external-db-password))
             rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -1126,6 +1138,7 @@ jobs:
           gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
           gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
           gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+          gcp_private_network_name: bbr-ubuntu-xenial-((branch_name))
           rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
           rds_mysql_password: ((brats-rds-mysql-external-db-password))
           rds_mysql_username: ((brats-rds-mysql-external-db-user))
@@ -1150,6 +1163,7 @@ jobs:
         GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
         GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
         GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+        GCP_PRIVATE_NETWORK_NAME: bbr-ubuntu-xenial-((branch_name))
         RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
         RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
         RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -1173,6 +1187,7 @@ jobs:
           GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
           GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
           GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+          GCP_PRIVATE_NETWORK_NAME: bbr-ubuntu-xenial-((branch_name))
           RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
           RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
           RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
@@ -1198,6 +1213,7 @@ jobs:
             gcp_postgres_databasename: ((brats-gcp-postgres-external-db-name))
             gcp_postgres_password: ((brats-gcp-postgres-external-db-password))
             gcp_postgres_username: ((brats-gcp-postgres-external-db-user))
+            gcp_private_network_name: bbr-ubuntu-xenial-((branch_name))
             rds_mysql_databasename: ((brats-rds-mysql-external-db-name))
             rds_mysql_password: ((brats-rds-mysql-external-db-password))
             rds_mysql_username: ((brats-rds-mysql-external-db-user))
