--- a/ci/tasks/test-brats-db-cleanup.yml
+++ b/ci/tasks/test-brats-db-cleanup.yml
@@ -31,3 +31,4 @@ params:
   GCP_POSTGRES_EXTERNAL_DB_USER: replace-me
   GCP_POSTGRES_EXTERNAL_DB_PASSWORD: replace-me
   GCP_POSTGRES_EXTERNAL_DB_NAME: replace-me
+  GCP_PRIVATE_NETWORK_NAME: replace-me
