Add postgres-9-4 for deploying old directors
[#163761951](https://www.pivotaltracker.com/story/show/163761951)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -53,6 +53,7 @@ shared:
       BOSH_VSPHERE_VCENTER_DISK_PATH:       {{vcenter-disk-path}}
       BOSH_VSPHERE_VCENTER_RP:              {{vcenter-rp}}
       DEPLOY_ARGS: |
+        -o bosh-deployment/experimental/postgres-9-4.yml \
         -o bosh-deployment/vsphere/resource-pool.yml
 
   - &prepare-bats-config
