Clean up githooks in repo
- symlinks git-hooks for robocop
- allows usage of global git-hooks which allows git-duet and password
commit catching to work
- remove unused git files

[#164176128](https://www.pivotaltracker.com/story/show/164176128)

Co-authored-by: James Myers <jmyers@pivotal.io>

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,8 @@
 export GOPATH=$PWD/src/go
 export PATH=$PWD/src/go/bin:$PATH
 export PATH=$PWD/bin:$PATH
-git config core.hooksPath git-hooks
+
+if [ ! -f $PWD/.git/hooks/pre-commit ]; then
+  ln -s $PWD/git-hooks/pre-commit $PWD/.git/hooks/pre-commit
+fi
+
