Print out message for debugging failed tasks
- install dependencies has an implicit requirement that the
download_bosh_agent task has also been run. Calls it out for future
contributers

- Remove version from rake and bundler call

--- a/src/bosh-template/spec/assets/template-test-release/src/Gemfile
+++ b/src/bosh-template/spec/assets/template-test-release/src/Gemfile
@@ -2,8 +2,8 @@
 
 source 'https://rubygems.org'
 
-gem 'rake', '~>10.0'
-gem 'bundler', '~>1.15.0'
+gem 'rake'
+gem 'bundler'
 
 group :production do
 end
