Vip Networks have optional subnets with static ip
- backfill testing on cloud manifest parser for vip networks
- extract subnet parsing logic into shared class

[#164092238](https://www.pivotaltracker.com/story/show/164092238)

Co-authored-by: Maya Rosecrance <mrosecrance@pivotal.io>

--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -18,7 +18,7 @@ Metrics/AbcSize:
 
 Metrics/BlockLength:
   Max: 25
-  ExcludedMethods: [describe, context, let, it, chdir, shared_examples]
+  ExcludedMethods: [describe, context, let, it, chdir, shared_examples, shared_examples_for]
 
 Metrics/ClassLength:
   Max: 200
