Use factory-bot to create a DeploymentPlan::Stemcell factory
- Proof of concept for other DeploymentPlan factories
- The `initialize_with` method is key

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -58,6 +58,7 @@ group :development, :test do
 
   # for director
   gem 'machinist', '~>1.0'
+  gem 'factory_bot'
 
   # for root level specs
   gem 'nats', '~>0.9.2'
