Use branch of bats to test v2 manifest
[#164668124](https://www.pivotaltracker.com/story/show/164668124)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -970,7 +970,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-acceptance-tests.git
-      branch: master
+      branch: v2_manifest
 
   - name: bosh-deployment
     type: git
