--- a/ci/bats/iaas/vsphere/prepare-bats-config.yml
+++ b/ci/bats/iaas/vsphere/prepare-bats-config.yml
@@ -7,6 +7,7 @@ image_resource:
     repository: bosh/main-ruby-go
 
 inputs:
+  - name: bosh-cli
   - name: bosh-src
   - name: environment
   - name: director-state
