--- a/ci/docker/main-ruby-go/Dockerfile
+++ b/ci/docker/main-ruby-go/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM ubuntu:14.04
 
 RUN apt-get clean && apt-get update && apt-get install -y locales
 
@@ -21,7 +21,6 @@ RUN apt-get install -y \
 	xvfb \
 	jq \
 	realpath \
-	sudo \
 	&& apt-get clean
 
 # Nokogiri dependencies
