--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -970,7 +970,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-acceptance-tests.git
-      branch: v2_manifest
+      branch: master
 
   - name: bosh-deployment
     type: git
