--- a/releases/index.yml
+++ b/releases/index.yml
@@ -25,6 +25,8 @@ builds:
     version: "96"
   0c3ce4ae-2ad7-4b70-bf68-3a11c199694d:
     version: "140"
+  0c66fe74-0089-4b79-6968-67713841e9b6:
+    version: 269.0.1
   0c923cc3-49ee-4376-9033-c51f7380794b:
     version: "256.7"
   0d469717-3f49-4e68-8472-7e11ddcd8a44:
