Config docker builds for os-image-stemcell-builder
[#165890173]

Co-authored-by: Chris Tarazi <ctarazi@pivotal.io>

--- a/ci/docker/pipeline.yml
+++ b/ci/docker/pipeline.yml
@@ -3,6 +3,7 @@ groups:
   jobs:
   - build-bosh-agent
   - build-os-image-stemcell-builder
+  - build-os-image-stemcell-builder-bionic
   - build-os-image-stemcell-publisher
   - build-bosh-blobstore-client
   - build-main-bats-aws
@@ -178,17 +179,73 @@ jobs:
         get_params:
           skip_download: true
 
+  - name: build-os-image-stemcell-builder-bionic
+    public: true
+    serial: true
+    plan:
+      - get: bosh-linux-stemcell-builder-in
+        trigger: true
+        resource: bosh-linux-stemcell-builder
+      - get: bosh-os-image-builder-vmware-ovftool
+      - task: copy-ovf
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: bosh/main-ruby-go
+          run:
+            path: /bin/bash
+            args:
+            - -cex
+            - |
+              git clone bosh-linux-stemcell-builder-in bosh-linux-stemcell-builder
+              cp bosh-os-image-builder-vmware-ovftool/VMware-ovftool-4.1.0-2459827-lin.x86_64.bundle bosh-linux-stemcell-builder/ci/docker/os-image-stemcell-builder-bionic/
+          inputs:
+          - name: bosh-os-image-builder-vmware-ovftool
+          - name: bosh-linux-stemcell-builder-in
+          outputs:
+          - name: bosh-linux-stemcell-builder
+      - put: os-image-stemcell-builder-bionic
+        params:
+          build: "bosh-linux-stemcell-builder/ci/docker/os-image-stemcell-builder-bionic"
+        get_params:
+          skip_download: true
+
   - name: build-os-image-stemcell-builder
     public: true
     serial: true
     plan:
-      - get: bosh-linux-stemcell-builder
+      - get: bosh-linux-stemcell-builder-in
         trigger: true
+        resource: bosh-linux-stemcell-builder
+      - get: bosh-os-image-builder-vmware-ovftool
+      - task: copy-ovf
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: bosh/main-ruby-go
+          run:
+            path: /bin/bash
+            args:
+            - -cex
+            - |
+              git clone bosh-linux-stemcell-builder-in bosh-linux-stemcell-builder
+              cp bosh-os-image-builder-vmware-ovftool/VMware-ovftool-4.1.0-2459827-lin.x86_64.bundle bosh-linux-stemcell-builder/ci/docker/os-image-stemcell-builder/
+          inputs:
+          - name: bosh-os-image-builder-vmware-ovftool
+          - name: bosh-linux-stemcell-builder-in
+          outputs:
+          - name: bosh-linux-stemcell-builder
       - put: os-image-stemcell-builder
         params:
           build: "bosh-linux-stemcell-builder/ci/docker/os-image-stemcell-builder"
         get_params:
           skip_download: true
+
+
 
   - name: build-main-base
     public: true
@@ -475,6 +532,24 @@ resources:
       email: ((dockerhub_email))
       username: ((dockerhub_username))
       password: ((dockerhub_password))
+
+  - name: os-image-stemcell-builder-bionic
+    type: docker-image
+    source:
+      repository: bosh/os-image-stemcell-builder
+      tag: bionic
+      email: ((dockerhub_email))
+      username: ((dockerhub_username))
+      password: ((dockerhub_password))
+
+  - name: bosh-os-image-builder-vmware-ovftool
+    type: s3
+    source:
+      access_key_id: ((os_images_vmware_ovftool_access_key_id))
+      bucket: ((aws_s3_bucket_name_os_images_vmware_ovftool))
+      region_name: ((aws_s3_region_os_images_vmware_ovftool))
+      secret_access_key: ((os_images_vmware_ovftool_secret_access_key))
+      versioned_file: VMware-ovftool-4.1.0-2459827-lin.x86_64.bundle
 
   - name: main-ubuntu-chroot
     type: docker-image
